# rustflask

./: Cargo.toml  README.md  main.py  pyproject.toml
benchmarks/: benchmark_runner.py  flask_server.py  rust_flask_benchmark.rs
examples/: README.md  beautiful_showcase.rs  combined_demo.rs  complete_benchmark_showcase.rs  enhanced_example.rs  fancy_showcase.rs  fixed_beautiful_showcase.rs  hello_world.rs  homepage.rs  showcase.rs  simple_test.rs  test_encoding.rs
reports/: benchmark_report.html  benchmark_results.json  magazine_benchmark_report.html  raw_data.csv
src/: lib.rs
