[package]
name = "rust_flask"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["client", "http1", "server", "tcp"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[dev-dependencies]
serde_json = "1.0"

[[example]]
name = "rust_flask_benchmark"
path = "benchmarks/rust_flask_benchmark.rs"

[[example]]
name = "homepage"
path = "examples/homepage.rs"

[[example]]
name = "complete_benchmark_showcase"
path = "examples/complete_benchmark_showcase.rs"
